# video-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  implementation_plan.md  prompt.md  pyproject.toml  requirements.txt  run_poc.py  specs.md
config/: config.yaml
config/prompts/: aggregation.txt  caption.txt  caption_warehouse.txt  chat.txt  entity_extraction.txt  event_extraction.txt  summarization.txt
specs/: 00-overview.md  01-gemini-file-manager.md  02-gemini-vlm.md  03-gemini-llm.md  04-gemini-embeddings.md  05-yolo-pipeline.md  06-stream-handler.md  07-rag-context-manager.md  08-milvus.md  09-neo4j.md  10-config-deployment.md  README.md
src/: __init__.py  asset_manager.py  chunk_info.py  config.py  file_splitter.py  utils.py  via_stream_handler.py
src/cv_pipeline/: __init__.py  cv_metadata_fuser.py  tracker.py  yolo_pipeline.py
src/db/: __init__.py  graph_ingestion.py  graph_retrieval.py  milvus_client.py  neo4j_client.py
src/models/: __init__.py
src/models/gemini/: __init__.py  gemini_embeddings.py  gemini_file_manager.py  (+2 more)
src/rag/: __init__.py  context_manager.py  context_store.py  hybrid_retrieval.py  milvus_store.py
src/ui/: __init__.py  gradio_app.py
tests/: __init__.py  test_asset_manager.py  test_context_manager.py  test_context_store.py  test_cv_metadata_fuser.py  test_file_splitter.py  test_gemini_embeddings.py  test_gemini_file_manager.py  test_gemini_llm.py  test_gemini_vlm.py  test_graph_ingestion.py  test_graph_ingestion_function.py  test_graph_retrieval.py  test_graph_retrieval_function.py  test_hybrid_retrieval.py  test_milvus_client.py  test_neo4j_client.py  test_summarization_function.py  test_tracker.py  test_via_stream_handler.py  test_yolo_pipeline.py
tests/integration/: __init__.py  test_gemini_integration.py  test_milvus_integration.py  test_neo4j_integration.py  test_rag_pipeline.py  test_video_processing.py
(+5 files in other folders)
